day-one/bonus/recreate-policy/recreate-service.yml
apiVersion: v1
kind: Service
metadata:
  name: recreate-service
spec:
  selector:
    app: recreate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
